test overflow-y: auto to fix linkedin browser bug

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 
 * {
     overscroll-behavior: none;
-
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -173,6 +172,7 @@ main {
 
 /* Messages Section */
 section#messages {
+    overflow-y: auto;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -205,6 +205,7 @@ section#messages {
 
 /* About Me Section */
 section#about-me {
+    overflow-y: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -273,6 +274,7 @@ section#about-me {
 
 /* Projects Section */
 section#projects {
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
